style: prevent body overflow

--- a/css/ber.css
+++ b/css/ber.css
@@ -1,10 +1,11 @@
 body {
   font-family: 'Courier New', monospace;
-  text-align: center;
   background-image: url('/img/improverdesmall.jpg');
-  background-repeat: no repeat;
+  background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
+  max-height: 100vh;
+  overflow: hidden;
 }
 /* Para pantallas más pequeñas */
 @media (max-width: 768px) {
